fix z-index for like button on looks

--- a/apparelrow/media/src/partials/_look.sass
+++ b/apparelrow/media/src/partials/_look.sass
@@ -252,6 +252,8 @@ body.edit-look
     margin-bottom: 250px
 
 body.look
+  .heart
+    z-index: 100
   .spread
     margin-top: 20px
     div.last
